
[2022/3/7]
・Added ability to check for errors in KMP files (KMPErrorCheck)
・Fixed a bug that caused a portion of Checkpoint to remain in the viewport when the current file was closed and another file was opened.

[2022/5/30]
・Added the ability to convert ObjFlowData.xml to ObjFlow.bin

[2022/9/22]
・Deletion of unnecessary codes and modification of some codes

[2022/9/23]
・Fixed KMPXml.cs

[2022/9/25]
・Fixed the scale factor used in the model for the Area section from 1000 to 2000.

[2022/9/26]
・KMP version 3000 files can now be edited (except for reading and writing Xml).
・EMAC section: missing codes have been re-added.

[2024/6/17]
・Code optimization, modification and organization
・NET Framework version changed to 4.8.1

[2024/6/19]
・Deleted unnecessary file, folder and comment lines

[2024/7/5]
・Added the functions of insert Group, Point
・Added the functions of multiple selection and batch processing
・Changed the Object item "OBJ" and "Obj" to "GameObject" and "Object"
・Displays the path of the open file
・Move the functions to show/hide Groups and Points individually to PropertyGrid (CH_KMPGroupPoint has been removed with this change)
・Added the functions to create a settings file and specify a default folder (Other -> Settings)
・Fixed bug that occurs after deleting Checkpoint points
・Fixed bug that occurs when closing and reopening a file

[2024/7/10]
・Added the functions to save files when exiting
・[Object] Added the functions to temporarily save information at the time of addition so that it can be automatically specified when adding again
・[Object] Added functions to set elements to be selected by default when added
・Changed angle notation from radian to degree (PropertyGrid)
・Fixed the Position value was included in the Rotation value

[2024/7/15]
・[TPKC] Changed Section_Type to KeyID
・[TPKC] Changed KeyID and Section default to 0xFF
・[EnemyRoutes] Changed UnknownData1 and UnknownData2 default value to 0
・Updated EditorTheme.xml